# paper_garden

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
commands/: paper-garden.md  paper-read.md
docs/superpowers/plans/: 2026-04-13-paper-garden.md  2026-04-14-paper-id.md  2026-04-14-paper-read.md
docs/superpowers/specs/: 2026-04-13-paper-garden-design.md  2026-04-14-paper-id-design.md  2026-04-14-paper-read-design.md
skills/paper-garden/: SKILL.md  paper_garden.toml  paper_garden.toml.example
skills/paper-garden/scripts/: _configure.py  _runtime.py  configure.py  download.py  finalize.py  migrate_ids.py  run.py
skills/paper-read/: SKILL.md
skills/paper-read/scripts/: locate.py
src/paper_garden/: __init__.py  config.py  configure.py  dedup.py  download.py  extract.py  ids.py  index.py  ingest.py  init.py  locate.py  tags.py  wiki.py
templates/: index.md  tag.md  wiki.md
tests/: test_config.py  test_configure.py  test_dedup.py  test_download.py  test_extract.py  test_ids.py  test_index.py  test_ingest.py  test_init.py  test_locate.py  test_migrate_ids.py  test_skill_bundle.py  test_tags.py  test_wiki.py
