[project]
name = "paper-garden"
version = "0.1.0"
description = "Codex skill for ingesting arXiv papers into a Markdown knowledge garden"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.32",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
