[project]
name = "paper-garden"
version = "0.1.0"
description = "Claude Code command and Codex skill for turning papers into a Markdown knowledge garden"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "wesley", email = "wesley@genlius.com" },
]
keywords = ["arxiv", "claude-code", "codex", "llm", "markdown", "research"]
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.32",
  "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/genliusrocks/paper_garden"
Repository = "https://github.com/genliusrocks/paper_garden"
Issues = "https://github.com/genliusrocks/paper_garden/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
